# soundmining-monorepo

./: .gitignore  README.md  config.yaml  pyproject.toml  soundmining.code-workspace
lib/sc-instruments/: banks.scd  control_instruments.scd  deterministic_signals.scd  filters.scd  grains.scd  noise_signals.scd  pan.scd  playback.scd  reverb.scd  signal_combinations.scd  volume_modulation.scd
lib/soundmining-library/: pyproject.toml
lib/soundmining-library/src/soundmining_library/: buffered_playback.py  bus_allocator.py  environment.py  generative.py  melody.py  note.py  piece.py  sequencer.py  sieve.py  spectrum.py  supercollider_client.py  supercollider_receiver.py  supercollider_score.py  tools.py
lib/soundmining-library/src/soundmining_library/modular/: audio_instruments.py  control_instruments.py  instrument.py  sound_play.py  synth_player.py
lib/soundmining-library/src/soundmining_library/modular_v2/: instruments_v2.py  synth_player_v2.py
lib/soundmining-library/src/soundmining_library/ui/: ui_controls.py  ui_piece.py  ui_piece_model.py
lib/soundmining-library/tests/: test_buffered_playback.py  test_bus_allocator.py  test_generative.py  test_instrument.py  test_melody.py  test_note.py  test_sequencer.py  test_sieve.py  test_spectrum.py  test_supercollider_score.py  test_ui_piece.py
projects/concrete-music-15/: concrete_music_15.ipynb  concrete_music_15_orig.ipynb  config.yaml  pyproject.toml
tools/sc/: compile_synths.scd  compiler.py  launcher.py  render_nrt.scd  startup.scd
