[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soundmining-library"
version = "1.0.0"
description = "Python implementation of soundmining tools"
requires-python = ">=3.12"
dependencies = [
    "python-osc",     
]

[tool.hatch.build.targets.wheel]
# This explicitly tells Hatchling where the source code lives
packages = ["src/soundmining_library"]